amun/overlays/power9/amun-inspection/argo-namespace-install.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: argo-server
spec:
  ports:
    - port: 2746
      targetPort: 2746
  selector:
    app: argo-server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argo-server
spec:
  selector:
    matchLabels:
      app: argo-server
  template:
    metadata:
      labels:
        app: argo-server
    spec:
      containers:
        - args:
            - server
            - --namespaced
          image: argocli:latest
          name: argo-server
          ports:
            - containerPort: 2746
          readinessProbe:
            httpGet:
              path: /
              port: 2746
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 20
      serviceAccountName: argo-server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: workflow-controller
spec:
  selector:
    matchLabels:
      app: workflow-controller
  template:
    metadata:
      labels:
        app: workflow-controller
    spec:
      containers:
        - args:
            - --configmap
            - workflow-controller-configmap
            - --executor-image
            - argoexec:latest
            - --namespaced
          command:
            - workflow-controller
          image: workflow-controller:latest
          name: workflow-controller
          resources:
            requests:
              memory: "2Gi"
              cpu: "1"
            limits:
              memory: "2Gi"
              cpu: "1"
      serviceAccountName: argo-server
