amun/overlays/power9/amun-inspection/argo-ui-route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: argo-ui
spec:
  port:
    targetPort: 2746
  to:
    kind: Service
    name: argo-server
    weight: 100
